--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "snowy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "I'm you slave",
+  "main": "index.js",  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
